--- a/app/views/Application/show.html
+++ b/app/views/Application/show.html
@@ -26,13 +26,15 @@
 
 <h3>Post a comment</h3>
  
+ 
+ 
 #{form @Application.postComment(post.id)}
 
 	#{ifErrors}
-		<p class="error">
-			All fields are required!
-		</p>
-	#{/ifErrors}
+    	<p class="error">
+        	${errors[0]}
+    	</p>
+    #{/ifErrors}
     <p>
         <label for="author">Your name: </label>
         <input type="text" name="author" id="author" />
@@ -41,6 +43,16 @@
         <label for="content">Your message: </label>
         <textarea name="content" id="content"></textarea>
     </p>
+    
+    <p>
+	    <label for="code">Please type the code below: </label>
+	    <img src="@{Application.captcha(randomID)}" />
+	    <br />
+	    <input type="text" name="code" id="code" size="18" value="" />
+	    <input type="hidden" name="randomID" value="${randomID}" />
+	</p>
+    
+    
     <p>
         <input type="submit" value="Submit your comment" />
     </p>
