--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
             </div>
             <ul id="tools">
                 <li>
-                    <a href="#">Log in to write something</a>
+	        		<a href="@{Admin.index()}">Log in to write something</a>
                 </li>
             </ul>
             <div id="title">
@@ -37,6 +37,5 @@
             <a href="http://www.playframework.org">Play framework</a>
             as a tutorial application.
         </p>
-        
     </body>
 </html>
